--- a/Dockerfile-centos
+++ b/Dockerfile-centos
@@ -5,6 +5,6 @@ RUN yum install -y curl && \
     yum -y clean all --enablerepo='*'
 
 
-# CMD gethostip www.google.com
+# CMD curl www.google.com
 
 CMD gethostip www.google.com
