--- a/Dockerfile-centos
+++ b/Dockerfile-centos
@@ -7,4 +7,8 @@ RUN yum install -y curl && \
 
 # CMD curl www.google.com
 
-CMD gethostip www.google.com
+# CMD gethostip www.google.com
+
+CMD curl 192.168.0.168:8880
+
+# CMD ping 192.168.0.168
